--- a/headers.tex
+++ b/headers.tex
@@ -1,4 +1,5 @@
-\usepackage{amsmath,amsfonts}
+\usepackage{amsmath,amsfonts,amssymb}
+\usepackage{mathrsfs}
 \usepackage{bm}
 \usepackage{nicefrac}
 \usepackage{booktabs}
