--- a/ATT Alg.tex
+++ b/ATT Alg.tex
@@ -22,6 +22,7 @@
 
 \usepackage{amsmath}
 %\allowdisplaybreaks
+\let\Bbbk\relax
 \usepackage{amssymb}
 %\usepackage{citehack}
 %\usepackage{latexsym}
